{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 15,
  "lineage": "3aa16d31-a63c-78b8-f228-5f66c39649ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP_natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-042a72a115719b418",
            "domain": "vpc",
            "id": "eipalloc-042a72a115719b418",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-175-81-93.compute-1.amazonaws.com",
            "public_ip": "35.175.81.93",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIPNATGwclops"
            },
            "tags_all": {
              "Name": "EIPNATGwclops"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "clops_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963698878721:internet-gateway/igw-017d138a0eee0a502",
            "id": "igw-017d138a0eee0a502",
            "owner_id": "963698878721",
            "tags": {
              "Name": "clops-igw"
            },
            "tags_all": {
              "Name": "clops-igw"
            },
            "vpc_id": "vpc-00d050a94a63fd41a"
          },
          "dependencies": [
            "aws_vpc.clops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "clops_natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-042a72a115719b418",
            "association_id": "eipassoc-068e137125ef985cd",
            "connectivity_type": "public",
            "id": "nat-06e561e595c9a49a2",
            "network_interface_id": "eni-08a499c530ffebc5a",
            "private_ip": "10.0.1.195",
            "public_ip": "35.175.81.93",
            "subnet_id": "subnet-0edc18107c28cfecf",
            "tags": {
              "Name": "clops_natgateway"
            },
            "tags_all": {
              "Name": "clops_natgateway"
            }
          },
          "dependencies": [
            "aws_eip.EIP_natgateway",
            "aws_subnet.clops_public_subnet",
            "aws_vpc.clops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963698878721:route-table/rtb-05ccdc7d5f68a1b4a",
            "id": "rtb-05ccdc7d5f68a1b4a",
            "owner_id": "963698878721",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e561e595c9a49a2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private_RT"
            },
            "tags_all": {
              "Name": "Private_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d050a94a63fd41a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.EIP_natgateway",
            "aws_nat_gateway.clops_natgateway",
            "aws_subnet.clops_public_subnet",
            "aws_vpc.clops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963698878721:route-table/rtb-004be7714cef32cc7",
            "id": "rtb-004be7714cef32cc7",
            "owner_id": "963698878721",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-017d138a0eee0a502",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_RT"
            },
            "tags_all": {
              "Name": "Public_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d050a94a63fd41a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.clops_IGW",
            "aws_vpc.clops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f287c0024f4d9f3f",
            "route_table_id": "rtb-05ccdc7d5f68a1b4a",
            "subnet_id": "subnet-06089936bd20f19ee"
          },
          "dependencies": [
            "aws_eip.EIP_natgateway",
            "aws_nat_gateway.clops_natgateway",
            "aws_route_table.private_route_table",
            "aws_subnet.clops_private_subnet",
            "aws_subnet.clops_public_subnet",
            "aws_vpc.clops_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a75132392c7023aa",
            "route_table_id": "rtb-05ccdc7d5f68a1b4a",
            "subnet_id": "subnet-08dfce7c90b368a7c"
          },
          "dependencies": [
            "aws_eip.EIP_natgateway",
            "aws_nat_gateway.clops_natgateway",
            "aws_route_table.private_route_table",
            "aws_subnet.clops_private_subnet",
            "aws_subnet.clops_public_subnet",
            "aws_vpc.clops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b467eb27df521bba",
            "route_table_id": "rtb-004be7714cef32cc7",
            "subnet_id": "subnet-0edc18107c28cfecf"
          },
          "dependencies": [
            "aws_internet_gateway.clops_IGW",
            "aws_route_table.public_route_table",
            "aws_subnet.clops_public_subnet",
            "aws_vpc.clops_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d546869fc3d6676",
            "route_table_id": "rtb-004be7714cef32cc7",
            "subnet_id": "subnet-083258ae986f0d89f"
          },
          "dependencies": [
            "aws_internet_gateway.clops_IGW",
            "aws_route_table.public_route_table",
            "aws_subnet.clops_public_subnet",
            "aws_vpc.clops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "clops_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963698878721:subnet/subnet-06089936bd20f19ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06089936bd20f19ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "963698878721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "clops-private-subnet-1"
            },
            "tags_all": {
              "Name": "clops-private-subnet-1"
            },
            "vpc_id": "vpc-00d050a94a63fd41a"
          },
          "dependencies": [
            "aws_vpc.clops_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963698878721:subnet/subnet-08dfce7c90b368a7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08dfce7c90b368a7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "963698878721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "clops-private-subnet-2"
            },
            "tags_all": {
              "Name": "clops-private-subnet-2"
            },
            "vpc_id": "vpc-00d050a94a63fd41a"
          },
          "dependencies": [
            "aws_vpc.clops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "clops_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963698878721:subnet/subnet-0edc18107c28cfecf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edc18107c28cfecf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "963698878721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "clops-public-subnet-1"
            },
            "tags_all": {
              "Name": "clops-public-subnet-1"
            },
            "vpc_id": "vpc-00d050a94a63fd41a"
          },
          "dependencies": [
            "aws_vpc.clops_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963698878721:subnet/subnet-083258ae986f0d89f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083258ae986f0d89f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "963698878721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "clops-public-subnet-2"
            },
            "tags_all": {
              "Name": "clops-public-subnet-2"
            },
            "vpc_id": "vpc-00d050a94a63fd41a"
          },
          "dependencies": [
            "aws_vpc.clops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "clops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963698878721:vpc/vpc-00d050a94a63fd41a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ca832abe82be833",
            "default_route_table_id": "rtb-0d55db54beeba5bf2",
            "default_security_group_id": "sg-0c6d6acfa2882079c",
            "dhcp_options_id": "dopt-05de7f34337d06be5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00d050a94a63fd41a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d55db54beeba5bf2",
            "owner_id": "963698878721",
            "tags": {
              "Name": "clops_vpc"
            },
            "tags_all": {
              "Name": "clops_vpc"
            }
          }
        }
      ]
    }
  ]
}